--- a/index.html
+++ b/index.html
@@ -84,28 +84,24 @@
                         <div class="project-skills-container">
                             <img class="project-skill" src="./images/stack/HTML.png" alt="" />
                             <img class="project-skill" src="./images/stack/CSS.png" alt="" />
-                            <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
-                            <img class="project-skill" src="./images/stack/netlify.svg" alt="" />
                             <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
-                            <img class="project-skill" src="./images/stack/Express.png" alt="" />
-                            <img class="project-skill" src="./images/stack/NextJsCircle.png" alt="" />
-                            <img class="project-skill" src="./images/stack/NodeJs.svg" alt="" />
-                            <img class="project-skill" src="./images/stack/MongoDB.svg" alt="" />
-                            <img class="project-skill" src="./images/stack/Redux.svg" alt="" />
-                            <img class="project-skill" src="./images/stack/Vercel.svg" alt="" /> 
+                            <img class="project-skill" src="./images/stack/Django.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/Python.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/netlify.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/Github.svg" alt="" />
                         </div>
 
                         <h2 class="project-heading">Ketch</h2>
 
                         <p class="project-subHeading">          
-                        Built a web application that closely mimicked the design of the popular Indian payment gateway, Razor Pay, using HTML & Tailwind CSS.
+                          Developed a fully functional eCommerce website using HTML, CSS, JavaScript, and Django. The site includes a responsive design, dynamic product catalog, and secure checkout process, demonstrating advanced skills in both front-end and back-end development.
                         </p>
                         <div class="btn-grp">
                             <button class="btn-pink btn-project">Read More</button>
                             <a href="#">
                             <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                             </a>
-                            <a href="https://razorpay-copy.netlify.app/">
+                            <a href="#">
                             <i title="Live Link" class="fa-solid fa-link icon"></i>
                             </a>
                         </div>
@@ -118,24 +114,23 @@
                     <div class="project-skill-container">
                       <img class="project-skill" src="./images/stack/HTML.png" alt="" />
                       <img class="project-skill" src="./images/stack/CSS.png" alt="" />
-                      <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
-                      <img class="project-skill" src="./images/stack/netlify.svg" alt="" />
                       <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
-                      <img class="project-skill" src="./images/stack/NextJsCircle.png" alt="" />
-                      <img class="project-skill" src="./images/stack/Redux.svg" alt="" />
-                      <img class="project-skill" src="./images/stack/Vercel.svg" alt="" />
+                      <img class="project-skill" src="./images/stack/Django.svg" alt="" />
+                      <img class="project-skill" src="./images/stack/Python.svg" alt="" />
+                      <img class="project-skill" src="./images/stack/netlify.svg" alt="" />
+                      <img class="project-skill" src="./images/stack/Github.svg" alt="" />
+
                     </div>
                     <h2 class="project-heading">Spends</h2>
                     <p class="project-sub-heading">
-                      Built a Discord clone web app using HTML, CSS and Tailwind CSS. It's a website that has been designed to mimic the design of the popular chat and voice communication platform, Discord. This project helped me to improve my skills in web development and showcased my ability to replicate a well- known platform, demonstrating my attention to 
-                      detail and my understanding.
+                    Created a comprehensive spends and income analyzer application using Django. This project features detailed financial tracking, data visualization, and reporting capabilities, offering users a robust tool for managing and analyzing their finances.
                     </p>
                     <div class="btn-group">
                     <button class="btn-pink btn-project">Read More</button>
                       <a href="#">
                         <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                       </a>
-                      <a href="https://discordwebapp.netlify.app/">
+                      <a href="#">
                         <i title="Live Link" class="fa-solid fa-link icon"></i>
                       </a>
                     </div>
@@ -149,23 +144,21 @@
                       <img class="project-skill" src="./images/stack/HTML.png" alt="" />
                       <img class="project-skill" src="./images/stack/CSS.png" alt="" />
                       <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
+                      <img class="project-skill" src="./images/stack/Django.svg" alt="" />
+                      <img class="project-skill" src="./images/stack/Python.svg" alt="" />
                       <img class="project-skill" src="./images/stack/netlify.svg" alt="" />
-                      <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
-                      <img class="project-skill" src="./images/stack/NextJsCircle.png" alt="" /> 
-                      <img class="project-skill" src="./images/stack/Vercel.svg" alt="" /> 
+                      <img class="project-skill" src="./images/stack/Github.svg" alt="" />
                     </div>
           
                     <h2 class="project-heading">Taskify</h2>
                     <p class="project-sub-heading">
-                      Designed and developed a web application that generates random passwords based on user preferences. The app allows users 
-                      to choose the length of the password and select the types of characters to include, such as uppercase letters, lowercase 
-                      letters, numbers, and special characters.                    </p>
+                    Developed a To-Do List application with user authentication and account management using Django for the back-end and a modern front-end. This project provides users with a secure and interactive platform to organize tasks and manage their daily activities efficiently.                 </p>
                     <div class="btn-group">
                     <button class="btn-pink btn-project">Read More</button>
                       <a href="#">
                         <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                       </a>
-                      <a href="https://rnd-passwordgenerator.netlify.app/">
+                      <a href="#">
                         <i title="Live Link" class="fa-solid fa-link icon"></i>
                       </a>
                     </div>
@@ -179,17 +172,18 @@
                       <img class="project-skill" src="./images/stack/HTML.png" alt="" />
                       <img class="project-skill" src="./images/stack/CSS.png" alt="" />
                       <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
+                      <img class="project-skill" src="./images/stack/Django.svg" alt="" />
+                      <img class="project-skill" src="./images/stack/Python.svg" alt="" />
+                      <img class="project-skill" src="./images/stack/netlify.svg" alt="" />
                       <img class="project-skill" src="./images/stack/Github.svg" alt="" />
                     </div>
                     <h2 class="project-heading">SkillShark</h2>
                     <p class="project-sub-heading">
-                      Designed and developed a web application that provides real-time weather information for a given location. The app 
-                      uses APIs to retrieve weather data and displays it in an easy-to-read format. It also includes feature like search 
-                      function.
+                     Built an online education platform using Django for the back-end and HTML, CSS, and JavaScript for the front-end. This project includes features such as course management, user authentication, and interactive learning modules, offering a comprehensive solution for delivering and managing online education.
                     </p>
                     <div class="btn-group">
                       <button class="btn-pink btn-project">Read More</button>
-                      <a href="https://github.com/Pranav0403/SkillShark-Minor-Project-.git">
+                      <a href="https://github.com/pranav0403/SkillShark.git">
                         <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                       </a>
                       <a href="https://skillshark.netlify.app">
